--- a/style.css
+++ b/style.css
@@ -47,3 +47,25 @@ main img{
     width: 100%;
 }
 
+.second_navigation {
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+}
+
+.featured_icons {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    gap: 20px;
+    text-align: center;
+
+}
+
+main h1 {
+    text-align: center;
+    font-size: xxx-large;
+}
+
+.featured_icons div {
+    border: solid;
+}
