put centered margin around the second navigation and featured sections so that icons would not stretch to the ends of the page css

--- a/style.css
+++ b/style.css
@@ -44,8 +44,14 @@ header nav a {
     color: white;
 }
 
+/* Main section styling */
+
+.second_navigation, .Featured {
+    width: 95%;
+    margin: auto;
+}
+
 main img{
-    text-align: center;
     width: 100%;
 }
 
